Hopefully fix code overflow issues on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,6 +53,7 @@ pre.highlight, pre.sourceCode {
   border: solid 1px #d0d0d0;
   background-color: #fafafa;
   padding: 0.5em;
+  overflow-y: auto;
 
   code {
     background-color: transparent;
